--- a/public/circles.html
+++ b/public/circles.html
@@ -37,7 +37,7 @@
         integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
         crossorigin="anonymous">
 </script>
-<script type="text/javascript" src="./waves.js"></script>
+<script type="text/javascript" src="./circles.js"></script>
 <body>
 </body>
 </html>
